<resources>
    <string name="google_maps_key"></string>
    <string name="previsao_tempo_key"></string>
    <string name="app_name">Agropragueiro</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sharedpreferences_file">br.net.olimpiodev.agropragueiro.CONFIGURACOES</string>
    <string name="clientes">Clientes</string>
    <string name="fazendas">Fazendas</string>
    <string name="ok">OK</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="nome">Nome</string>
    <string name="uf">UF</string>
    <string name="cidade">Cidade</string>
    <string name="cancelar">Cancelar</string>
    <string name="opcional">Opcional</string>
    <string name="obrigatorio">Obrigatório</string>
    <string name="categoria">Categoria</string>
    <string name="n_o_existem_dados_cadastrados">Não existem dados cadastrados!</string>
    <string name="titulo_opcoes_card">Selecione uma opção abaixo</string>
    <string name="observacao">Observação</string>
    <string name="contorno">Contorno</string>
    <string name="novo">Novo</string>
    <string name="salvar">Salvar</string>
    <string name="remover">Remover</string>
    <string name="qtde">Qtde</string>
    <string name="zero">0</string>
    <string name="cinquenta">50</string>
    <string name="sobre">Sobre</string>
    <string name="informacoes">Informações</string>
    <string name="nao_exibir">Não exibir novamente</string>
    <string name="exibir_instrucao_mapa_contorno">EXIBIR_INSTRUCAO_MAPA_CONTORNO</string>
    <string name="exibir_instrucao_coletar_dados">EXIBIR_INSTRUCAO_COLETAR_DADOS</string>
    <string name="minimo_dois_caracteres">Mínimo 2 caracteres</string>
    <string name="minimo_quatro_caracteres">Mínimo 4 caracteres</string>
    <string name="minimo_cinco_caracteres">Mínimo 5 caracteres</string>
    <string name="sucesso">Dados cadastrados com sucesso !</string>
    <string name="erro">Erro ao cadastrar dados !</string>
    <string name="cancelada">Ação cancelada !</string>
    <string name="cadastrar_cliente">Cadastrar Cliente</string>
    <string name="amostragens">Amostragens</string>
    <string name="cliente_param">Cliente_Param</string>
    <string name="cliente_validacao">Nome deve ser maior que 3 caracteres e cidade maior que 1 caractere</string>
    <string-array name="opcoes_cliente_card">
        <item>Editar</item>
        <item>Excluir</item>
    </string-array>
    <string name="cadastrar_fazenda">Cadastrar Fazenda</string>
    <string name="cliente">Cliente</string>
    <string name="fazenda_param">Fazenda_Param</string>
    <string name="fazenda_validacao">Nome da fazenda deve ser maior que 3 caracteres e cidade maior que 1 caractere</string>
    <string-array name="opcoes_fazenda_card">
        <item>Editar</item>
        <item>Excluir</item>
    </string-array>
    <string name="title_activity_login">Login</string>
    <string name="crie_sua_conta">Crie sua conta</string>
    <string name="email">E-mail</string>
    <string name="senha">Senha</string>
    <string name="nome_completo">Nome Completo</string>
    <string name="email_valido">O email deve ser válido</string>
    <string name="fazenda">Fazenda</string>
    <string name="talhoes">Talhões</string>
    <string name="cadastrar_talhao">Cadastrar Talhão</string>
    <string name="talhao_param">Talhao_Param</string>
    <string name="talhao_id_param">Talhao_id_Param</string>
    <string name="qtde_amostragem_by_talhao">Qtde_amostragem_by_talhao</string>
    <string name="contorno_param">Contorno_Param</string>
    <string name="talhao_erro_cadastro">O nome do talhão deve ter mais que 1 caractere</string>
    <string-array name="opcoes_talhao_card">
        <item>Ver ou adicionar contorno no mapa</item>
        <item>Editar</item>
        <item>Excluir</item>
    </string-array>
    <string name="titulo_dialog">Selecione o tipo do Mapa</string>
    <string name="titulo_dialog_ponto">Escolha ação que deseja aplicar no ponto</string>
    <string name="my_location">Centralizando na localização do usuário</string>
    <string name="basemaps">Tipos mapas</string>
    <string name="mapa_instrucao_titulo">Desenhar contorno no mapa</string>
    <string name="coletar_dados_instrucao">Coletar dados</string>
    <string name="contorno_removido">Contorno removido com sucesso</string>
    <string name="mapa_instrucao_texto">Para desenhar o contorno no mapa marque dois pontos,
        será exibido a primeira linha do contorno. \nContorno na cor azul não pode ser alterado, ele
        tem referência com amostragem. \nContorno em vermelho não tem referência e pode ser
        modificado.</string>
    <string name="coletar_dados_texto">Para coletar dados, clique no ponto desejado</string>
    <string name="ponto_com_dados_acao">Não é possível mover ou remover ponto que já tenha
        dados coletados</string>
    <string-array name="mapa_types">
        <item>Normal</item>
        <item>Híbrido</item>
        <item>Satélite</item>
        <item>Terreno</item>
    </string-array>
    <string-array name="mapa_pontos">
        <item>Remover</item>
        <item>Mover</item>
    </string-array>
    <string name="talhao">Talhão</string>
    <string name="pontos">Pontos</string>
    <string name="data">Data</string>
    <string name="cadastrar_amostragem">Cadastrar Amostragem</string>
    <string name="amostragem_param">Amostragem_Param</string>
    <string name="amostragem_id_param">Amostragem_id_Param</string>
    <string name="amostragem_pontos">Amostragem_Pontos</string>
    <string name="amostragem_sem_contorno">O talhão desta amostragem não tem contorno, para
        continuar adicione um contorno ao talhão</string>
    <string-array name="opcoes_amostragem_card">
        <item>Visualizar dados dos pontos</item>
        <item>Ver ou adicionar pontos no mapa</item>
        <item>Coletar dados amostragem</item>
        <item>Editar dados amostragem</item>
        <item>Excluir amostragem</item>
    </string-array>
    <string-array name="opcoes_amostragem_card_sem_pontos">
        <item>Ver ou adicionar pontos no mapa</item>
        <item>Editar dados amostragem</item>
        <item>Excluir amostragem</item>
    </string-array>
    <string name="ponto_removido">Ponto removido com sucesso!</string>
    <string name="coletar_dados">Coletar Dados</string>
    <string name="pontos_amostragem">Pontos Amostragem</string>
    <string name="praga">Praga</string>
    <string name="dano_causado">Dano causado</string>
    <string name="registrar_fotos">Registrar fotos</string>
    <string name="validar_praga_qtde">Os campos praga e qtde são obrigatórios</string>
    <string name="prefix_foto">foto.jpg</string>
    <string name="ponto_registro_id">ponto_registro_id</string>
    <string name="ponto_registro_detalhes">ponto_registro_detalhes</string>
    <string name="ponto_registro_string">ponto_registro_string</string>
    <string name="fotos">Fotos</string>
    <string name="erro_info_usuario">Erro ao buscar informações do usuário</string>
    <string name="previsao_tempo">Prev. Tempo</string>
    <string name="buscando_dados">Buscando dados, aguarde…</string>
    <string name="dados_previsao_param">dados_previsao_param</string>
    <string name="storm">storm</string>
    <string name="rain">rain</string>
    <string name="snow">snow</string>
    <string name="hail">hail</string>
    <string name="fog">fog</string>
    <string name="clear_day">clear_day</string>
    <string name="clear_night">clear_night</string>
    <string name="cloud">cloud</string>
    <string name="cloudly_day">cloudly_day</string>
    <string name="cloudly_night">cloudly_night</string>
    <string name="erro_get_clientes">Erro ao buscar clientes</string>
    <string name="erro_adapter_clientes">Erro ao listar clientes</string>
    <string name="erro_cadastrar_cliente">Erro ao cadastrar cliente</string>
    <string name="erro_view_clientes">Erro ao carregar view clientes</string>
    <string name="erro_view_cadastro_clientes">Erro ao carregar view cadastro clientes</string>
    <string name="erro_carregar_dados_cadastro_clientes">Erro ao carregar dados cadastro clientes</string>
    <string name="erro_validacao_cliente">Erro validação cadastro cliente</string>
    <string name="erro_args_cliente">Erro argumentos cadastro cliente</string>
    <string name="erro_abrir_cadastro_clientes">Erro ao abrir cadastro clientes</string>
    <string name="erro_abrir_lista_fazendas_cliente">Erro ao abrir lista de fazendas do cliente</string>
    <string name="erro_abrir_opcoes_cliente">Erro abrir opções do cliente</string>
    <string name="cliente_erro_cadastro">O nome deve ter mais que 4 caracteres e a cidade mais que 2</string>
    <string name="erro_carregar_clientes_mapa">Erro ao carregar clientes no mapa</string>
    <string name="erro_get_fazendas">Erro ao buscar fazendas</string>
    <string name="erro_view_fazendas">Erro ao carregar view fazendas</string>
    <string name="erro_abrir_cadastro_fazendas">Erro ao abrir cadastro fazendas</string>
    <string name="erro_abrir_lista_talhoes_fazenda">Erro ao abrir lista de talhões da fazenda</string>
    <string name="erro_abrir_opcoes_fazenda">Erro abrir opções da fazenda</string>
    <string name="erro_argumentos_fazenda">Erro ao ler argumentos fazenda</string>
    <string name="erro_carregar_dados_cadastro_fazenda">Erro ao carregar dados cadastro fazenda</string>
    <string name="fazenda_erro_validacao">Erro na validação da fazenda</string>
    <string name="erro_cadastrar_fazenda">Erro ao cadastrar fazenda</string>
    <string name="erro_buscar_dados_cliente">Erro ao buscar dados cliente</string>
    <string name="erro_view_talhao">Erro ao carregar view talhao</string>
    <string name="erro_get_talhao_by_id">Erro ao buscar talhao por ID</string>
    <string name="erro_abrir_cadastro_talhao">Erro ao abrir cadastro talhão</string>
    <string name="erro_abrir_lista_amostragens_talhao">Erro ao abrir llista amostragens do talhão</string>
    <string name="erro_abrir_opcoes_talhao">Erro abrir opções talhão</string>
    <string name="erro_ler_argumentos_talhao">Erro ao ler argumentos talhão</string>
    <string name="erro_buscar_talhoes">Erro buscar talhões</string>
    <string name="erro_carregar_dados_cadastro_talhao">Erro ao carregar dados cadastro talhão</string>
    <string name="erro_cadastrar_talhao">Erro ao cadastrar talhão</string>
    <string name="erro_view_amostragem">Erro ao carregar view amostragem</string>
    <string name="erro_args_amostragem">Erro ao ler argumentos amostragem</string>
    <string name="erro_carregar_view_amostragem">Erro ao carregar view amostragem</string>
    <string name="erro_cadastro_amostragem">Erro ao abrir cadastro amostragem</string>
    <string name="erro_abrir_opcoes_amostragem">Erro ao abrir opções amostragem</string>
    <string name="erro_buscar_amostragens">Erro ao buscar amostragens</string>
    <string name="erro_carregar_dados_cadastro_amostragem">Erro ao carregar dados cadastro amostragem</string>
    <string name="erro_validacao_amostragem">O nome da amostragem deve ter mais que 3 caracteres e data deve ser preenchida</string>
    <string name="erro_cadastrar_amostragem">Erro ao cadastrar amostragem</string>
    <string name="erro_buscar_amostragem_por_id">Erro ao buscar amostragem por ID</string>
    <string name="erro_salvar_contorno">Erro ao salvar contorno</string>
    <string name="erro_remover_contorno">Erro ao remover contorno</string>
    <string name="erro_carregar_contorno">Erro ao carregar contorno no mapa</string>
</resources>