<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_clientes"
            android:icon="@drawable/ic_menu_person"
            android:title="@string/clientes" />
        <item
            android:id="@+id/nav_fazendas"
            android:icon="@drawable/ic_menu_map"
            android:title="@string/fazendas" />
        <item
            android:id="@+id/nav_talhoes"
            android:icon="@drawable/ic_menu_map"
            android:title="@string/talhoes" />
        <item
            android:id="@+id/nav_amostragens"
            android:icon="@drawable/ic_menu_location"
            android:title="@string/amostragens" />
    </group>

    <item android:title="@string/informacoes">
        <menu>
            <item
                android:id="@+id/nav_sobre"
                android:icon="@drawable/ic_menu_info"
                android:title="@string/sobre" />
        </menu>
    </item>

</menu>
