<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.activity.Cadastro.ClienteCadastroActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nome" />

        <EditText
            android:id="@+id/et_nome_cliente"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/minimo_quatro_caracteres"
            android:inputType="text" />

        <TextView
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/uf" />

        <Spinner
            android:id="@+id/sp_uf_cliente"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/cidade" />

        <EditText
            android:id="@+id/et_cidade_cliente"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/minimo_dois_caracteres"
            android:inputType="text" />

        <Button
            android:id="@+id/bt_cadastrar_cliente"
            android:layout_marginTop="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cadastrar" />

        <Button
            android:id="@+id/btn_novo_cliente"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/novo"
            android:visibility="gone"/>

    </LinearLayout>

</LinearLayout>