<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".fragment.Cadastro.ClienteCadastroFragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/cadastrar_cliente"
                android:textSize="25sp"
                android:layout_marginBottom="20dp"
                tools:textColor="#000" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nome" />

            <EditText
                android:id="@+id/et_nome_cliente"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/minimo_quatro_caracteres"
                android:inputType="text" />

            <TextView
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/uf" />

            <Spinner
                android:id="@+id/sp_uf_cliente"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/cidade" />

            <EditText
                android:id="@+id/et_cidade_cliente"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/minimo_dois_caracteres"
                android:inputType="text" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/bt_cancelar_cliente"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layout_weight="1"
                    android:text="@string/cancelar" />

                <Button
                    android:id="@+id/bt_cadastrar_cliente"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layout_weight="1"
                    android:enabled="false"
                    android:text="@string/cadastrar" />
            </LinearLayout>

            <Button
                android:id="@+id/btn_novo_cliente"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/novo"
                android:visibility="visible" />

        </LinearLayout>

    </FrameLayout>
</ScrollView>