<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cliente" />

        <Spinner
            android:id="@+id/sp_cliente_faz"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/nome" />

        <EditText
            android:id="@+id/et_nome_faz"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/minimo_dois_caracteres"
            android:inputType="text" />

        <TextView
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/uf" />

        <Spinner
            android:id="@+id/sp_uf_faz"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cidade" />

        <EditText
            android:id="@+id/et_cidade_faz"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/minimo_dois_caracteres" />

        <Button
            android:id="@+id/bt_cadastrar_faz"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/cadastrar" />

    </LinearLayout>

</ScrollView>